gl31-master/src/test/deca/syntax/invalid/sansobjet/unknow_or.deca
// Description:
//    tests de programme incorrect syntaxiquement pour sans-objet
//
// Resultats:
//    Ligne 12 : Erreur, '|' non-valable
//
// Historique:
//    cree le 12/01/2021
{
    boolean b;

    while(b | true){
        print(b);
    }
}
